# openclaw-detect-file-type-local

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  release-check.yml
detect_file_type/: cli.py
tests/: test_cli.py
