[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detect-file-type"
version = "0.1.0"
description = "AI-powered local file type detection — an OpenClaw skill powered by Google Magika"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "magika>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
detect-file-type = "detect_file_type.cli:main"

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
